--- a/style.css
+++ b/style.css
@@ -1,26 +1,45 @@
 
 body{
-
     background-color: #efeee7;
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: #333333;
     margin: 0;
-    padding: 0;
-
-    
+    padding: 0;  
 }
-
 header{
-
 background-color: #333333;
-
 }
-
 h1{
-
 color: #eee;
 font-size: 28px;
 margin: 50;
 padding: 50;
+}
+h2{
+    font-size: 24px;
+    margin: 0 auto;
+}
 
+.main_bio, .contact_info, .bio_image {
+    float: left;
+    margin: 100;
+    padding: 100;
+}
+#bioimage{
+
+    width: 200px;
+    height: 200px;
+    margin: 50px;
+
+}
+
+.contact_info {
+    border-width: 5px;
+    border-color: black;
+    border-style: solid;
+    margin: 20px;
+    width: 30%;
+}
+.main_bio{
+    width: 70%;
 }
